==> pawan97-19/Floatsat-3d/Attitude_Determination/LSM9DS1.cpp <==
#include "LSM9DS1.h"
#include "LSM9DS1_Registers.h"
#include "LSM9DS1_Types.h"
#include "rodos.h"
#define SENSITIVITY_ACCELEROMETER_2  0.000061
#define SENSITIVITY_ACCELEROMETER_4  0.000122
#define SENSITIVITY_ACCELEROMETER_8  0.000244
#define SENSITIVITY_ACCELEROMETER_16 0.000732
#define SENSITIVITY_GYROSCOPE_245    0.00875
#define SENSITIVITY_GYROSCOPE_500    0.0175
#define SENSITIVITY_GYROSCOPE_2000   0.07
#define SENSITIVITY_MAGNETOMETER_4   0.00014
#define SENSITIVITY_MAGNETOMETER_8   0.00029
#define SENSITIVITY_MAGNETOMETER_12  0.00043
#define SENSITIVITY_MAGNETOMETER_16  0.00058

uint16_t LSM9DS1::beginSPI()
{
	// Set device settings, they are used in many other places
	settings.device.commInterface = IMU_MODE_SPI;
	//settings.device.agAddress = ag_CS_pin;
	//settings.device.mAddress = m_CS_pin;
	
	//! Todo: don't use _xgAddress or _mAddress, duplicating memory
	//_xgAddress = settings.device.agAddress;
	//_mAddress = settings.device.mAddress;
	
	init();
	
	constrainScales();
	// Once we have the scale values, we can calculate the resolution
	// of each sensor. That's what these functions are for. One for each sensor
	calcgRes(); // Calculate DPS / ADC tick, stored in gRes variable
	calcmRes(); // Calculate Gs / ADC tick, stored in mRes variable
	calcaRes(); // Calculate g / ADC tick, stored in aRes variable
	
	// Now, initialize our hardware interface.
	initSPI();	// Initialize SPI
		
	// To verify communication, we can read from the WHO_AM_I register of
	// each device. Store those in a variable so we can return them.
	uint8_t mTest = mReadByte(WHO_AM_I_M);		// Read the gyro WHO_AM_I
	PRINTF("WHO_AM_I_=%x\r\n",mTest);
	uint8_t xgTest = xgReadByte(WHO_AM_I_XG);	// Read the accel/mag WHO_AM_I
	PRINTF("WHO_AM_XG_=%x\r\n",xgTest);
	uint16_t whoAmICombined = (xgTest << 8) | mTest;
	
	if (whoAmICombined != ((WHO_AM_I_AG_RSP << 8) | WHO_AM_I_M_RSP))
		return 0;
	
	// Gyro initialization stuff:
	initGyro();	// This will "turn on" the gyro. Setting up interrupts, etc.
	
	// Accelerometer initialization stuff:
	initAccel(); // "Turn on" all axes of the accel. Set up interrupts, etc.
	
	// Magnetometer initialization stuff:
	initMag(); // "Turn on" all axes of the mag. Set up interrupts, etc.

	// Once everything is initialized, return the WHO_AM_I registers we read:
	return whoAmICombined;
}

void LSM9DS1::initSPI()
{
	LSM9DS1_SPI.init(1000000);
	LSM9DS1_CSAG.init(true,1,1);
	LSM9DS1_CSM.init(true,1,1);
}

void LSM9DS1::SPIwriteByte(HAL_GPIO* csPin, uint8_t subAddress, uint8_t data)
{
	// If write, bit 0 of the subAddress (MSB) should be 0
    // If single byte, bit 1 of the subAddress should be 0
	subAddress = subAddress & 0x3F;
	uint8_t DATA[2] = {subAddress, data};
	csPin->setPins(0); // Initiate communication
	LSM9DS1_SPI.write(DATA, 2); // Send data
	csPin->setPins(1); // Close communication
}

uint8_t LSM9DS1::SPIreadBytes(HAL_GPIO* csPin, uint8_t subAddress, uint8_t * dest, uint8_t count)
{
	// To indicate a read, set bit 0 (msb) of first byte to 1
	uint8_t rAddress = 0x80 | (subAddress & 0x3F);
	// Mag SPI port is different. If we're reading multiple bytes,
	// set bit 1 to 1. The remaining six bytes are the address to be read
	if ((csPin == &LSM9DS1_CSM) && count > 1)
		rAddress |= 0x40;

	uint8_t temp[count+1];
	csPin->setPins(0); // Initiate communication
	LSM9DS1_SPI.writeRead(&rAddress, 1, temp, count+1);
	csPin->setPins(1); // Close communication

	for (int i=0; i<count; i++)
	{
		dest[i]=temp[i+1];
	}
	
	return count;
}

void LSM9DS1::I2CwriteByte(uint8_t address, uint8_t subAddress, uint8_t data)
{
	uint8_t DATA[2] = {subAddress, data};
	LSM9DS1_I2C.write(address, DATA, 2);
}

uint8_t LSM9DS1::I2CreadByte(uint8_t address, uint8_t subAddress)
{
	uint8_t DATA[1];
	LSM9DS1_I2C.writeRead(address, &subAddress, 1, DATA, 1);
	return DATA[0];
}

uint8_t LSM9DS1::I2CreadBytes(uint8_t address, uint8_t subAddress, uint8_t * dest, uint8_t count)
{
	subAddress = subAddress | 0x80;
	LSM9DS1_I2C.writeRead(address, &subAddress, 1, dest, count);

	return count;
}
